--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="flex-1 overflow-y-auto pt-16 px-8 pb-8 text-center no-scrollbar">
-                <h2 class="text-xl font-black text-slate-800 mb-1">คุณปิติ ตัณฑเกษม</h2>
+                <h2 class="text-xl font-black text-slate-800 mb-1">ปิติ ตัณฑเกษม</h2>
                 <p class="text-xs text-ttb-orange tracking-widest mb-6">Chief Executive Officer<br>ธนาคารทหารไทยธนชาต จำกัด (มหาชน)</p>
                 <div class="bg-slate-50 p-7 rounded-[32px] border border-slate-100 text-left space-y-5">
                     <p class="text-slate-600 leading-relaxed text-lm italic font-medium">"สวัสดีครับ เพื่อนพนักงานสัญญาจ้างภายนอก"</p>
@@ -348,4 +348,5 @@ const _0x3d0c4f=_0x1a93;(function(_0x5aa6ea,_0x36c55f){const _0x1783f5=_0x1a93,_
 </body>
 
 </html>
+
 
