--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
             </div>
 
             <div class="relative z-10 flex-1 flex flex-col items-center justify-center text-center px-8 w-full">
-                <div style="margin-top:15px;" class="shake-hard">
-                    <center><img src="./images/y2026.png" style="width:70%; height: auto;" onerror="this.style.display='none'"></center>
+                <div style="margin-top:15px;">
+                    <center><img src="./images/y2026.png" style="width:auto; height: 220px;" onerror="this.style.display='none'"></center>
                 </div>               
                 <h1 class="text-2xl font-extrabold text-white mb-2 tracking-tight drop-shadow-md animate-pulse" style="margin-top:15px;">อั่งเปา ลุ้นโชค 2 ชั้น</h1>
                 <p class="text-lm text-red-100 font-medium mb-10 opacity-90 drop-shadow-sm">จาก ทีทีบี (ttb)</p>
@@ -371,3 +371,4 @@ const _0x50ee68=_0x4ad2;(function(_0x32986e,_0x5bc0ee){const _0x2c7e9f=_0x4ad2,_
     </script>
 </body>
 </html>
+
